# typesplainer-web

./: .gitignore  Procfile  README.md  pyproject.toml  requirements.txt  vercel.json
api/: index.py
src/: app.py  uwsgi.ini
src/static/: index.js  styles.css  typesplain.css
src/static/themes/: Copilot.json
src/website/: __init__.py  app.py
src/website/static/: browserconfig.xml  index.html  index.js  styles.css  typesplain.css
src/website/templates/: error.html  typesplain.html
